Readded App_Start files from a different copy of the source code that I found.  Also re-added Tournament and Volunteer Registration Controllers from another copy of the source code.

--- a/OdysseyMvc4/OdysseyMvc4/OdysseyMvc4.csproj
+++ b/OdysseyMvc4/OdysseyMvc4/OdysseyMvc4.csproj
@@ -145,6 +145,8 @@
     <Compile Include="Controllers\CoachesTrainingRegistrationController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\JudgesRegistrationController.cs" />
+    <Compile Include="Controllers\TournamentRegistrationController.cs" />
+    <Compile Include="Controllers\VolunteerRegistrationController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
