--- a/OdysseyMvc4/packages/repositories.config
+++ b/OdysseyMvc4/packages/repositories.config
@@ -2,4 +2,5 @@
 <repositories>
   <repository path="..\OdysseyMvc4.Tests\packages.config" />
   <repository path="..\OdysseyMvc4\packages.config" />
+  <repository path="..\UpdateProblemSynopsesForRegistration\packages.config" />
 </repositories>
