Re-added Tournament and Volunteer Registration View files to the project. - Added Documentation folder to the project.

--- a/OdysseyMvc4/OdysseyMvc4/OdysseyMvc4.csproj
+++ b/OdysseyMvc4/OdysseyMvc4/OdysseyMvc4.csproj
@@ -314,6 +314,7 @@
       <DependentUpon>OdysseyModel.edmx</DependentUpon>
       <LastGenOutput>OdysseyModel.cs</LastGenOutput>
     </Content>
+    <Content Include="Documentation\Odyssey Registration Configuration.docx" />
     <None Include="Properties\PublishProfiles\novanorth.org - FTP.pubxml" />
     <None Include="Properties\PublishProfiles\novanorth.org - Web Deploy.pubxml" />
     <None Include="Properties\PublishProfiles\novasouth.org - FTP.pubxml" />
@@ -368,6 +369,23 @@
     <Content Include="Views\Shared\Closed.cshtml" />
     <Content Include="Views\Shared\Down.cshtml" />
     <Content Include="Views\Shared\Soon.cshtml" />
+    <Content Include="Views\TournamentRegistration\BadAltCoachEmail.cshtml" />
+    <Content Include="Views\TournamentRegistration\BadCoachEmail.cshtml" />
+    <Content Include="Views\TournamentRegistration\Error.cshtml" />
+    <Content Include="Views\TournamentRegistration\Page01.cshtml" />
+    <Content Include="Views\TournamentRegistration\Page02.cshtml" />
+    <Content Include="Views\TournamentRegistration\Page03.cshtml" />
+    <Content Include="Views\TournamentRegistration\Page04.cshtml" />
+    <Content Include="Views\TournamentRegistration\Page05.cshtml" />
+    <Content Include="Views\TournamentRegistration\Page06.cshtml" />
+    <Content Include="Views\TournamentRegistration\Page07.cshtml" />
+    <Content Include="Views\TournamentRegistration\Page08.cshtml" />
+    <Content Include="Views\TournamentRegistration\Page09.cshtml" />
+    <Content Include="Views\TournamentRegistration\Page10.cshtml" />
+    <Content Include="Views\TournamentRegistration\ResendEmail.cshtml" />
+    <Content Include="Views\VolunteerRegistration\Page01.cshtml" />
+    <Content Include="Views\VolunteerRegistration\Page02.cshtml" />
+    <Content Include="Views\VolunteerRegistration\Page03.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
