"Final" clean up of Tournament Registration controller.
- Included Tournament Registration partial view in the sln.

--- a/OdysseyMvc4/OdysseyMvc4/OdysseyMvc4.csproj
+++ b/OdysseyMvc4/OdysseyMvc4/OdysseyMvc4.csproj
@@ -386,6 +386,7 @@
     <Content Include="Views\VolunteerRegistration\Page01.cshtml" />
     <Content Include="Views\VolunteerRegistration\Page02.cshtml" />
     <Content Include="Views\VolunteerRegistration\Page03.cshtml" />
+    <Content Include="Views\Shared\TournamentRegistration\EmailPartial.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
