Updated the root directory web.config file. - Now includes a section to configure "Add WWW prefix".

--- a/web.config
+++ b/web.config
@@ -1,38 +1,45 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <configuration>
-	<system.web>
-		<trust level="Medium" />
-	</system.web>
-	<system.webServer>
-		<defaultDocument>
-			<files>
-				<clear />
-				<add value="index.html" />
-				<add value="index.htm" />
-				<add value="index.asp" />
-				<add value="index.aspx" />
-				<add value="default.html" />
-				<add value="default.htm" />
-				<add value="default.asp" />
-				<add value="default.aspx" />
-				<add value="index.php" />
-				<add value="winhostdefault.htm" />
-			</files>
-		</defaultDocument>
-		<directoryBrowse enabled="false" />
-		<httpErrors>
-			<remove statusCode="403" subStatusCode="-1" />
-		</httpErrors>
-		<rewrite>
-			<rules>
-				<rule name="Redirect to https" stopProcessing="true">
-					<match url=".*" />
-					<conditions>
-						<add input="{HTTPS}" pattern="off" ignoreCase="true" />
-					</conditions>
-					<action type="Redirect" url="https://{HTTP_HOST}{REQUEST_URI}" redirectType="Permanent" appendQueryString="false" />
-				</rule>
-			</rules>
-		</rewrite>
-	</system.webServer>
+  <system.web>
+    <trust level="Medium" />
+  </system.web>
+  <system.webServer>
+    <defaultDocument>
+      <files>
+        <clear />
+        <add value="index.html" />
+        <add value="index.htm" />
+        <add value="index.asp" />
+        <add value="index.aspx" />
+        <add value="default.html" />
+        <add value="default.htm" />
+        <add value="default.asp" />
+        <add value="default.aspx" />
+        <add value="index.php" />
+        <add value="winhostdefault.htm" />
+      </files>
+    </defaultDocument>
+    <directoryBrowse enabled="false" />
+    <httpErrors>
+      <remove statusCode="403" subStatusCode="-1" />
+    </httpErrors>
+    <rewrite>
+      <rules>
+        <rule name="Redirect to https" stopProcessing="true">
+          <match url=".*" />
+          <conditions>
+            <add input="{HTTPS}" pattern="off" ignoreCase="true" />
+          </conditions>
+          <action type="Redirect" url="https://{HTTP_HOST}{REQUEST_URI}" redirectType="Permanent" appendQueryString="false" />
+        </rule>
+        <rule name="Add WWW prefix" stopProcessing="true">
+          <match url="(.*)" ignoreCase="true" />
+          <conditions>
+            <add input="{HTTP_HOST}" pattern="^novanorth\.org$" />
+          </conditions>
+          <action type="Redirect" url="https://www.novanorth.org/{R:0}" redirectType="Permanent" />
+        </rule>
+      </rules>
+    </rewrite>
+  </system.webServer>
 </configuration>
