--- a/OdysseyRegistration/OdysseyCoreMvc/Properties/launchSettings.json
+++ b/OdysseyRegistration/OdysseyCoreMvc/Properties/launchSettings.json
@@ -1,21 +1,14 @@
-﻿{
-  "iisSettings": {
-    "windowsAuthentication": false,
-    "anonymousAuthentication": true,
-    "iisExpress": {
-      "applicationUrl": "http://localhost:51260",
-      "sslPort": 44376
-    }
-  },
+{
   "profiles": {
     "OdysseyCoreMvc": {
       "commandName": "Project",
-      "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:7233;http://localhost:5233",
+      "launchUrl": "JudgesRegistration/Page01",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "dotnetRunMessages": true,
+      "applicationUrl": "https://localhost:7233;http://localhost:5233"
     },
     "IIS Express": {
       "commandName": "IISExpress",
@@ -23,6 +16,14 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
+    }
+  },
+  "iisSettings": {
+    "windowsAuthentication": false,
+    "anonymousAuthentication": true,
+    "iisExpress": {
+      "applicationUrl": "http://localhost:51260",
+      "sslPort": 44376
     }
   }
 }
