--- a/OdysseyRegistration/OdysseyMvc2023/OdysseyMvc2023.csproj
+++ b/OdysseyRegistration/OdysseyMvc2023/OdysseyMvc2023.csproj
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Import Project="..\packages\EntityFramework.6.4.4\build\EntityFramework.props" Condition="Exists('..\packages\EntityFramework.6.4.4\build\EntityFramework.props')" />
   <Import Project="..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1\build\net46\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props" Condition="Exists('..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1\build\net46\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -45,6 +46,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.4.4\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.4.4\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -120,11 +127,41 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\BaseRegistrationController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\JudgesRegistrationController.cs" />
+    <Compile Include="Controllers\TournamentRegistrationController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\Config.cs" />
+    <Compile Include="Models\ContactUsRecipient.cs" />
+    <Compile Include="Models\ContactUsSenderRole.cs" />
+    <Compile Include="Models\Event.cs" />
+    <Compile Include="Models\Judge.cs" />
+    <Compile Include="Models\JudgesExport.cs" />
+    <Compile Include="Models\OdysseyModel.Context.cs" />
+    <Compile Include="Models\OdysseyRepository.cs" />
+    <Compile Include="Models\Problem.cs" />
+    <Compile Include="Models\QueryInfo.cs" />
+    <Compile Include="Models\School.cs" />
+    <Compile Include="Models\TournamentRegistration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewData\BaseViewData.cs" />
+    <Compile Include="ViewData\JudgesRegistration\Page01ViewData.cs" />
+    <Compile Include="ViewData\JudgesRegistration\Page02ViewData.cs" />
+    <Compile Include="ViewData\JudgesRegistration\Page03ViewData.cs" />
+    <Compile Include="ViewData\TournamentRegistration\Page01ViewData.cs" />
+    <Compile Include="ViewData\TournamentRegistration\Page02ViewData.cs" />
+    <Compile Include="ViewData\TournamentRegistration\Page03ViewData.cs" />
+    <Compile Include="ViewData\TournamentRegistration\Page04ViewData.cs" />
+    <Compile Include="ViewData\TournamentRegistration\Page05ViewData.cs" />
+    <Compile Include="ViewData\TournamentRegistration\Page06ViewData.cs" />
+    <Compile Include="ViewData\TournamentRegistration\Page07ViewData.cs" />
+    <Compile Include="ViewData\TournamentRegistration\Page08ViewData.cs" />
+    <Compile Include="ViewData\TournamentRegistration\Page09ViewData.cs" />
+    <Compile Include="ViewData\TournamentRegistration\Page10ViewData.cs" />
+    <Compile Include="ViewData\TournamentRegistration\ResendEmailViewData.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-grid.css" />
@@ -152,6 +189,9 @@
     <Content Include="Scripts\bootstrap.esm.min.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
+    <Content Include="Models\OdysseyModel.csdl" />
+    <Content Include="Models\OdysseyModel.msl" />
+    <Content Include="Models\OdysseyModel.ssdl" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
@@ -180,7 +220,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.rtl.min.css.map" />
@@ -242,7 +281,10 @@
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
     <Error Condition="!Exists('..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1\build\net46\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1\build\net46\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props'))" />
+    <Error Condition="!Exists('..\packages\EntityFramework.6.4.4\build\EntityFramework.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\EntityFramework.6.4.4\build\EntityFramework.props'))" />
+    <Error Condition="!Exists('..\packages\EntityFramework.6.4.4\build\EntityFramework.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\EntityFramework.6.4.4\build\EntityFramework.targets'))" />
   </Target>
+  <Import Project="..\packages\EntityFramework.6.4.4\build\EntityFramework.targets" Condition="Exists('..\packages\EntityFramework.6.4.4\build\EntityFramework.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
