--- a/OdysseyRegistration/OdysseyMvc2023/OdysseyMvc2023.csproj
+++ b/OdysseyRegistration/OdysseyMvc2023/OdysseyMvc2023.csproj
@@ -278,6 +278,9 @@
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\JudgesRegistration\Page01.cshtml" />
+    <Content Include="Views\JudgesRegistration\Page02.cshtml" />
+    <Content Include="Views\JudgesRegistration\Page03.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
