--- a/OdysseyRegistration/OdysseyMvc2023/OdysseyMvc2023.csproj
+++ b/OdysseyRegistration/OdysseyMvc2023/OdysseyMvc2023.csproj
@@ -281,6 +281,12 @@
     <Content Include="Views\JudgesRegistration\Page01.cshtml" />
     <Content Include="Views\JudgesRegistration\Page02.cshtml" />
     <Content Include="Views\JudgesRegistration\Page03.cshtml" />
+    <Content Include="Views\Shared\TournamentRegistration\EmailPartial.cshtml" />
+    <Content Include="Views\Shared\BadEmail.cshtml" />
+    <Content Include="Views\Shared\Closed.cshtml" />
+    <Content Include="Views\Shared\Down.cshtml" />
+    <Content Include="Views\Shared\EmailPartial.cshtml" />
+    <Content Include="Views\Shared\Soon.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
