This code completely works! (99.9% certain)
- Continue testing.
- Added missing EF source files.
- Entity Framework didn't work until I re-added these files from an old copy of the source code.
- I rolled back to EF 4.4 to make sure everything worked.
- Included bin\EntityFramework.dll/.xml (v4.4) in case I cannot find them again.
- Added TODO to readme.md to test EF6.
- Upgraded NuGet packages to latest versions.
- Removed Bootstrap NuGet package since we're not using it.

--- a/OdysseyRegistration/OdysseyMvc2023/Web.config
+++ b/OdysseyRegistration/OdysseyMvc2023/Web.config
@@ -6,7 +6,7 @@
 <configuration>
     <configSections>
         <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-        <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+        <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=4.4.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
         <sectionGroup name="elmah">
             <section name="security" requirePermission="false" type="Elmah.SecuritySectionHandler, Elmah" />
             <section name="errorLog" requirePermission="false" type="Elmah.ErrorLogSectionHandler, Elmah" />
@@ -22,8 +22,18 @@
     <elmah xmlns="http://Elmah.Configuration">
         <security allowRemoteAccess="true" />
         <errorLog type="Elmah.SqlErrorLog, Elmah" connectionString="Data Source=s06.winhost.com;Initial Catalog=DB_12824_elmah;User ID=DB_12824_elmah_user;Password=;Integrated Security=False" />
+        <!--<errorLog type="Elmah.SqlErrorLog, Elmah" connectionString="Data Source=s30.winhost.com;Initial Catalog=DB_12824_elmahtest;User ID=DB_12824_elmahtest_user;Password=;Integrated Security=False" />-->
         <!--<errorLog type="Elmah.SqlErrorLog, Elmah" connectionString="Data Source=s06.winhost.com;Initial Catalog=DB_27415_elmah;User ID=DB_27415_elmah_user;Password=;Integrated Security=False" />-->
     </elmah>
+    <connectionStrings>
+        <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-OdysseyMvc4-20130925190747;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-OdysseyMvc4-20130925190747.mdf" />
+        <add name="TestOdysseyEntities" connectionString="metadata=res://*/Models.OdysseyModel.csdl|res://*/Models.OdysseyModel.ssdl|res://*/Models.OdysseyModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=s06.winhost.com;initial catalog=DB_12824_test;persist security info=True;user id=DB_12824_test_user;password=;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+        <add name="NovaNorthOdysseyEntities" connectionString="metadata=res://*/Models.OdysseyModel.csdl|res://*/Models.OdysseyModel.ssdl|res://*/Models.OdysseyModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=s06.winhost.com;initial catalog=DB_12824_registration;persist security info=True;user id=DB_12824_registration_user;password=;MultipleActiveResultSets=True;App=EntityFramework;Encrypt=yes;TrustServerCertificate=true&quot;" providerName="System.Data.EntityClient" />
+        <add name="OdysseyEntities" connectionString="metadata=res://*/Models.OdysseyModel.csdl|res://*/Models.OdysseyModel.ssdl|res://*/Models.OdysseyModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=s06.winhost.com;Initial Catalog=DB_12824_registration;Persist Security Info=True;User ID=DB_12824_registration_user;Password=;MultipleActiveResultSets=True;Application Name=EntityFramework;Encrypt=yes;TrustServerCertificate=true&quot;" providerName="System.Data.EntityClient" />
+        <add name="OdysseyEntitiesTest" connectionString="metadata=res://*/Models.OdysseyModel.csdl|res://*/Models.OdysseyModel.ssdl|res://*/Models.OdysseyModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=s30.winhost.com;Initial Catalog=DB_12824_registertest;Persist Security Info=True;User ID=DB_12824_registertest_user;Password=;MultipleActiveResultSets=True;Application Name=EntityFramework;Encrypt=yes;TrustServerCertificate=true&quot;" providerName="System.Data.EntityClient" />
+        <add name="NovaSouthOdysseyEntities" connectionString="metadata=res://*/Models.OdysseyModel.csdl|res://*/Models.OdysseyModel.ssdl|res://*/Models.OdysseyModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=s06.winhost.com;initial catalog=DB_27415_registration;persist security info=True;user id=DB_27415_registration_user;password=;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+        <!--<add name="OdysseyEntities" connectionString="metadata=res://*/Models.OdysseyModel.csdl|res://*/Models.OdysseyModel.ssdl|res://*/Models.OdysseyModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=s06.winhost.com;initial catalog=DB_27415_registration;persist security info=True;user id=DB_27415_registration_user;password=;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+    </connectionStrings>
     <appSettings>
         <add key="webpages:Version" value="3.0.0.0" />
         <add key="webpages:Enabled" value="false" />
@@ -47,6 +57,14 @@
             <add name="ErrorFilter" type="Elmah.ErrorFilterModule, Elmah" />
         </httpModules>
     </system.web>
+    <system.webServer>
+        <validation validateIntegratedModeConfiguration="false" />
+        <modules>
+            <add name="ErrorLog" type="Elmah.ErrorLogModule, Elmah" preCondition="managedHandler" />
+            <add name="ErrorMail" type="Elmah.ErrorMailModule, Elmah" preCondition="managedHandler" />
+            <add name="ErrorFilter" type="Elmah.ErrorFilterModule, Elmah" preCondition="managedHandler" />
+        </modules>
+    </system.webServer>
     <runtime>
         <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
             <dependentAssembly>
@@ -59,7 +77,7 @@
             </dependentAssembly>
             <dependentAssembly>
                 <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" />
-                <bindingRedirect oldVersion="0.0.0.0-12.0.0.0" newVersion="12.0.0.0" />
+                <bindingRedirect oldVersion="0.0.0.0-13.0.0.0" newVersion="13.0.0.0" />
             </dependentAssembly>
             <dependentAssembly>
                 <assemblyIdentity name="System.Web.Optimization" publicKeyToken="31bf3856ad364e35" />
@@ -79,29 +97,24 @@
             </dependentAssembly>
             <dependentAssembly>
                 <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
-                <bindingRedirect oldVersion="0.0.0.0-5.2.9.0" newVersion="5.2.9.0" />
+                <bindingRedirect oldVersion="0.0.0.0-5.3.0.0" newVersion="5.3.0.0" />
             </dependentAssembly>
         </assemblyBinding>
     </runtime>
     <system.codedom>
         <compilers>
-            <compiler language="c#;cs;csharp" extension=".cs" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:1659;1699;1701" />
-            <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
+            <compiler language="c#;cs;csharp" extension=".cs" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=4.1.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:1659;1699;1701" />
+            <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=4.1.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
         </compilers>
     </system.codedom>
     <entityFramework>
-        <providers>
+        <!--<providers>
             <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
-        </providers>
+        </providers>-->
+        <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
+            <parameters>
+                <parameter value="v11.0" />
+            </parameters>
+        </defaultConnectionFactory>
     </entityFramework>
-    <system.webServer>
-        <validation validateIntegratedModeConfiguration="false" />
-        <modules>
-            <add name="ErrorLog" type="Elmah.ErrorLogModule, Elmah" preCondition="managedHandler" />
-            <add name="ErrorMail" type="Elmah.ErrorMailModule, Elmah" preCondition="managedHandler" />
-            <add name="ErrorFilter" type="Elmah.ErrorFilterModule, Elmah" preCondition="managedHandler" />
-        </modules>
-    </system.webServer>
-    <elmah>
-    </elmah>
 </configuration>
