--- a/OdysseyRegistration/OdysseyMvc2023/packages.config
+++ b/OdysseyRegistration/OdysseyMvc2023/packages.config
@@ -4,7 +4,8 @@
   <package id="elmah.corelibrary" version="1.2.2" targetFramework="net48" />
   <package id="Elmah.Mvc" version="2.1.2" targetFramework="net48" />
   <package id="jQuery" version="3.7.1" targetFramework="net48" />
-  <package id="jQuery.Validation" version="1.19.5" targetFramework="net48" />
+  <package id="jQuery.UI.Combined" version="1.13.2" targetFramework="net48" />
+  <package id="jQuery.Validation" version="1.20.0" targetFramework="net48" />
   <package id="Microsoft.AspNet.Mvc" version="5.3.0" targetFramework="net48" />
   <package id="Microsoft.AspNet.Razor" version="3.3.0" targetFramework="net48" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net48" />
