--- a/OdysseyRegistration/OdysseyRegistrationWebApi/OdysseyRegistrationWebApi.csproj
+++ b/OdysseyRegistration/OdysseyRegistrationWebApi/OdysseyRegistrationWebApi.csproj
@@ -6,6 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>d362b457-2a8e-4b18-b942-b18c39781811</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
