--- a/OdysseyRegistration/OdysseyMvc2024/appsettings.json
+++ b/OdysseyRegistration/OdysseyMvc2024/appsettings.json
@@ -8,6 +8,5 @@
   "ConnectionStrings": {
     "OdysseyEntities": "Server=localhost;Database=DB_12824_registration;User Id=sa;Password=;TrustServerCertificate=True;"
   },
-  "AllowedHosts": "*",
-  "ProxyTo": ""
+  "AllowedHosts": "*"
 }
