--- a/OdysseyRegistration/OdysseyMvc2024/Properties/launchSettings.json
+++ b/OdysseyRegistration/OdysseyMvc2024/Properties/launchSettings.json
@@ -14,16 +14,14 @@
       "launchBrowser": true,
       "applicationUrl": "https://localhost:7106;http://localhost:5106",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development",
-        "ProxyTo": "https://localhost:44361"
+        "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development",
-        "ProxyTo": "https://localhost:44361"
+        "ASPNETCORE_ENVIRONMENT": "Development"
       }
     }
   }
