Judges Registration now works in .NET 9!
- LOTS of other changes.

--- a/OdysseyRegistration/OdysseyMvc2024/appsettings.json
+++ b/OdysseyRegistration/OdysseyMvc2024/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "OdysseyEntities": "Server=localhost;Database=DB_12824_registration;User Id=sa;Password=;TrustServerCertificate=True;"
+    "OdysseyConnection": "Server=localhost;Database=DB_12824_registration;User Id=sa;Password=;TrustServerCertificate=True;"
   },
   "AllowedHosts": "*"
 }
