Update SQL initialization to support variable substitution
Modified `docker-compose.yml` to enhance the SQL initialization process by adding the `-v` option to `sqlcmd` commands. This change introduces the `sa_password` variable, dynamically set from the `sa_password` secret file, allowing SQL scripts (`init.sql` and `novanorth-prod.sql`) to reference the password during execution. Retained existing error handling and `.db-initialized` marker logic.

--- a/OdysseyRegistration/docker-compose.yml
+++ b/OdysseyRegistration/docker-compose.yml
@@ -51,10 +51,10 @@ services:
         if [ ! -f /var/opt/mssql/.db-initialized ]; then
           echo 'Initializing database from SQL scripts...'
           if [ -f /init/init.sql ]; then
-            /opt/mssql-tools18/bin/sqlcmd -b -C -S localhost -U sa -P $(cat /run/secrets/sa_password) -d master -i /init/init.sql || { echo 'init.sql failed'; exit 1; }
+            /opt/mssql-tools18/bin/sqlcmd -b -C -S localhost -U sa -P $(cat /run/secrets/sa_password) -d master -v sa_password=$(cat /run/secrets/sa_password) -i /init/init.sql || { echo 'init.sql failed'; exit 1; }
           fi
           if [ -f /init/novanorth-prod.sql ]; then
-            /opt/mssql-tools18/bin/sqlcmd -b -C -S localhost -U sa -P $(cat /run/secrets/sa_password) -d master -i /init/novanorth-prod.sql || { echo 'novanorth-prod.sql failed'; exit 1; }
+            /opt/mssql-tools18/bin/sqlcmd -b -C -S localhost -U sa -P $(cat /run/secrets/sa_password) -d master -v sa_password=$(cat /run/secrets/sa_password) -i /init/novanorth-prod.sql || { echo 'novanorth-prod.sql failed'; exit 1; }
           else
             echo 'ERROR: /init/novanorth-prod.sql not found'
             exit 1
