docs: add Docker startup prior to the Odyssey website & development environment documentation
Add comprehensive Docker setup instructions to copilot-instructions.md
and expand Docker Compose.md with detailed configuration documentation
including launch profiles, startup configurations, and troubleshooting.

--- a/OdysseyRegistration/launchSettings.json
+++ b/OdysseyRegistration/launchSettings.json
@@ -6,6 +6,37 @@
       "serviceActions": {
         "odysseyregistrationwebapi": "StartDebugging"
       }
+    },
+    "Docker Compose + OdysseyMvc2024": {
+      "commandName": "DockerCompose",
+      "commandVersion": "1.0",
+      "serviceActions": {
+        "odysseyregistrationwebapi": "StartWithoutDebugging"
+      },
+      "composerUp": {
+        "services": ["sqlserver"]
+      },
+      "otherProjects": [
+        {
+          "projectPath": "OdysseyMvc2024\\OdysseyMvc2024.csproj",
+          "action": "StartDebugging",
+          "waitForHealthCheck": false
+        }
+      ]
+    },
+    "SQL Server + OdysseyMvc2024": {
+      "commandName": "DockerCompose",
+      "commandVersion": "1.0",
+      "composerUp": {
+        "services": ["sqlserver"]
+      },
+      "otherProjects": [
+        {
+          "projectPath": "OdysseyMvc2024\\OdysseyMvc2024.csproj",
+          "action": "StartDebugging",
+          "waitForHealthCheck": true
+        }
+      ]
     }
   }
 }
