docs: enhance security configuration documentation for secrets management
Add comprehensive instructions for managing secrets across development, Docker, and production environments. Documentation now covers:

- User Secrets setup for OdysseyMvc2024 with step-by-step commands
- Docker sa_password.txt configuration and mounting details
- Production deployment options for WinHost (environment variables, appsettings.Production.json, Web.config, Azure Key Vault)
- Connection string configuration patterns for different environments
- Explicit warnings about never committing secrets to git

This improves developer onboarding and clarifies production deployment security practices.

--- a/OdysseyRegistration/OdysseyMvc2024/OdysseyMvc2024.csproj
+++ b/OdysseyRegistration/OdysseyMvc2024/OdysseyMvc2024.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net10.0</TargetFramework>
@@ -6,6 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <AssemblyDescription>Odyssey of the Mind Registration System using ASP.NET 10</AssemblyDescription>
     <AssemblyCopyright>Copyright © 2014-2026</AssemblyCopyright>
+    <UserSecretsId>4fc61b4d-cbaa-46ed-b907-349d6beff28e</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
